samples/_failures_safe/1761303841_a43c05_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_02187a2a.c: In function ‘main’:
./samples/SAFE/__tmp_02187a2a.c:149:15: error: expected ‘;’ at end of input
  149 |         printf
      |               ^
      |               ;
./samples/SAFE/__tmp_02187a2a.c:149:9: error: expected declaration or statement at end of input
  149 |         printf
      |         ^~~~~~
./samples/SAFE/__tmp_02187a2a.c:149:9: error: expected declaration or statement at end of input
